Revision history for DBD-Cassandra

0.53    unreleased

      * No more Perl 5.8 support -- 5.10 is now required

0.52    2016/09/26

      * Attempt to support older Perl versions, from 5.08 and up

0.51    2016/08/23

      * Splits Cassandra-specific code into Cassandra::Client.
        DBD::Cassandra is now a wrapper providing a DBI interface

0.25    2016/03/17

      * Fix encoding and decoding of floats and doubles. If you were using these prior to 0.25, please read the upgrade notice in the DBD::Cassandra pod.

0.24    2016/01/25

      * Drop the Authen::SASL dependency, which was (sort of) incompatible with Cassandra's SASL

0.23    2015/10/13

      * Revert a change from 0.21 (finishing handles earlier) which caused compat issues with DBD::mysql
      * Support for the map<..,..> data type

0.22    2015/10/08

      * Fix an issue where an "insert into .. if not exists update .." would cause warnings
      * Add support for list<..> and set<..> data types

0.21    2015/09/17

      * Finish the st handle slightly earlier: when we actually read the last row
      * Add a very basic readline-based plcqlsh implementation for machines without Java
      * Support for the 'counter' data type

0.20    2015/09/14

      * Timeuuid/uuid support

0.19    2015/09/09

      * Performance improvements

0.18    2015/09/07

      * Fix an issue where executing more than 32767 queries may break the driver

0.17    2015/09/07

      * Support for asynchronous queries
      * Drop 'retries' which was a bad idea

0.16    2015/09/03

      * When running with "perl -l", the driver now actually works

0.15    2015/08/11

      * Support for pagination through result sets
      * careful: Timestamps are now in msec accuracy instead of having them as floating points
      * Enable TCP keepalive on sockets

0.14    2015/05/19

      * Resolve an old bug where connecting to CQL3 might cause compilation errors