@@ -3,6 +3,7 @@ Revision history for DBD-Cassandra
 0.53    unreleased
 
       * No more Perl 5.8 support -- 5.10 is now required
+      * Fix a corner case where DBI didn't like the output of a 'LIST PERMISSIONS' with zero rows
 
 0.52    2016/09/26
 
